@@ -174,6 +174,16 @@
             </varlistentry>
 
             <varlistentry>
+              <term>A_ACCEPT, A_ACCEPT+ and A_ACCEPT!</term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.20. Audited versions of ACCEPT,
+                ACCEPT+ and ACCEPT! respectively. Require AUDIT_TARGET support
+                in the kernel and iptables.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
               <term><emphasis role="bold">NONAT</emphasis></term>
 
               <listitem>
@@ -203,6 +213,16 @@
             </varlistentry>
 
             <varlistentry>
+              <term>A_DROP and A_DROP!</term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.20. Audited versions of DROP and
+                DROP! respectively. Require AUDIT_TARGET support in the kernel
+                and iptables.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
               <term><emphasis role="bold">REJECT</emphasis></term>
 
               <listitem>
@@ -218,6 +238,16 @@
                 <para>like REJECT but exempts the rule from being suppressed
                 by OPTIMIZE=1 in <ulink
                 url="shorewall.conf.html">shorewall.conf</ulink>(5).</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term>A_REJECT AND A_REJECT!</term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.20. Audited versions of REJECT
+                and REJECT! respectively. Require AUDIT_TARGET support in the
+                kernel and iptables.</para>
               </listitem>
             </varlistentry>
 
