@@ -301,8 +301,8 @@
       <varlistentry>
         <term><emphasis
         role="bold">BLACKLIST_DISPOSITION=</emphasis>[<emphasis
-        role="bold">DROP</emphasis>|<emphasis
-        role="bold">REJECT</emphasis>]</term>
+        role="bold">DROP</emphasis>|A_DROP|<emphasis
+        role="bold">REJECT|A_REJECT</emphasis>]</term>
 
         <listitem>
           <para>This parameter determines the disposition of packets from
@@ -310,6 +310,10 @@
           be dropped or REJECT if the packets are to be replied with an ICMP
           port unreachable reply or a TCP RST (tcp only). If you do not assign
           a value or if you assign an empty value then DROP is assumed.</para>
+
+          <para>A_DROP and A_REJECT are audited versions of DROP and REJECT
+          respectively and were added in Shorewall 4.4.20. They require
+          AUDIT_TARGET in the kernel and iptables.</para>
         </listitem>
       </varlistentry>
 
@@ -1071,7 +1075,7 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
         <term><emphasis role="bold">MACLIST_DISPOSITION=</emphasis>[<emphasis
         role="bold">ACCEPT</emphasis>|<emphasis
         role="bold">DROP</emphasis>|<emphasis
-        role="bold">REJECT</emphasis>]</term>
+        role="bold">REJECT</emphasis>|A_DROP|A_REJECT]</term>
 
         <listitem>
           <para>Determines the disposition of connections requests that fail
@@ -1080,6 +1084,10 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
           or DROP (ignore the connection request). If not set or if set to the
           empty value (e.g., MACLIST_DISPOSITION="") then
           MACLIST_DISPOSITION=REJECT is assumed.</para>
+
+          <para>A_DROP and A_REJECT are audited versions of DROP and REJECT
+          respectively and were added in Shorewall 4.4.20. They require
+          AUDIT_TARGET in the kernel and iptables.</para>
         </listitem>
       </varlistentry>
 
@@ -1108,8 +1116,8 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
           <para>This problem can be worked around by setting
           MACLIST_TABLE=mangle which will cause Mac verification to occur out
           of the PREROUTING chain. Because REJECT isn't available in that
-          environment, you may not specify MACLIST_DISPOSITION=REJECT with
-          MACLIST_TABLE=mangle.</para>
+          environment, you may not specify MACLIST_DISPOSITION=REJECT or
+          MACLIST_DISPOSITION=A_REJECT with MACLIST_TABLE=mangle.</para>
         </listitem>
       </varlistentry>
 
@@ -1601,6 +1609,20 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
       </varlistentry>
 
       <varlistentry>
+        <term><emphasis role="bold">SMURF_DISPOSITION=</emphasis>[<emphasis
+        role="bold">DROP</emphasis>|A_DROP]</term>
+
+        <listitem>
+          <para>Added in Shorewall 4.4.20. The default setting is DROP which
+          causes smurf packets (see the nosmurfs option in <ulink
+          url="shorewall-interfaces.html">shorewall-interfaces</ulink>(5)) to
+          be dropped. A_DROP causes the packets to be audited prior to being
+          dropped and requires AUDIT_TARGET support in the kernel and
+          iptables.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
         <term><emphasis
         role="bold">SMURF_LOG_LEVEL=</emphasis>[<emphasis>log-level</emphasis>]</term>
 
@@ -1744,7 +1766,7 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
         role="bold">TCP_FLAGS_DISPOSITION=</emphasis>[<emphasis
         role="bold">ACCEPT</emphasis>|<emphasis
         role="bold">DROP</emphasis>|<emphasis
-        role="bold">REJECT</emphasis>]</term>
+        role="bold">REJECT</emphasis>|A_DROP|A_REJECT]</term>
 
         <listitem>
           <para>Determines the disposition of TCP packets that fail the checks
@@ -1755,6 +1777,10 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
           response) or DROP (ignore the packet). If not set or if set to the
           empty value (e.g., TCP_FLAGS_DISPOSITION="") then
           TCP_FLAGS_DISPOSITION=DROP is assumed.</para>
+
+          <para>A_DROP and A_REJECT are audited versions of DROP and REJECT
+          respectively and were added in Shorewall 4.4.20. They require
+          AUDIT_TARGET in the kernel and iptables.</para>
         </listitem>
       </varlistentry>
 
