@@ -150,6 +150,16 @@
             </varlistentry>
 
             <varlistentry>
+              <term>A_ACCEPT and A_ACCEPT!</term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.20. Audited versions of ACCEPT
+                and ACCEPT! respectively. Require AUDIT_TARGET support in the
+                kernel and ip6tables.</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
               <term><emphasis role="bold">DROP</emphasis></term>
 
               <listitem>
@@ -164,6 +174,16 @@
                 <para>like DROP but exempts the rule from being suppressed by
                 OPTIMIZE=1 in <ulink
                 url="shorewall6.conf.html">shorewall6.conf</ulink>(5).</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term>A_DROP and A_DROP!</term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.20. Audited versions of DROP and
+                DROP! respectively. Require AUDIT_TARGET support in the kernel
+                and ip6tables.</para>
               </listitem>
             </varlistentry>
 
@@ -183,6 +203,16 @@
                 <para>like REJECT but exempts the rule from being suppressed
                 by OPTIMIZE=1 in <ulink
                 url="shorewall6.conf.html">shorewall6.conf</ulink>(5).</para>
+              </listitem>
+            </varlistentry>
+
+            <varlistentry>
+              <term>A_REJECT AND A_REJECT!</term>
+
+              <listitem>
+                <para>Added in Shorewall 4.4.20. Audited versions of REJECT
+                and REJECT! respectively. Require AUDIT_TARGET support in the
+                kernel and ip6tables.</para>
               </listitem>
             </varlistentry>
 
